# HeteroServing

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: c-cpp.yml  codeql-analysis.yml
client/: CMakeLists.txt  app.py  big_images.py  client.py  img_split_join.py  simple_client.py
client/grpc/: simple_client.py
client/http/: big_images.py  simple_client.py
client_server_beast/: CMakeLists.txt
client_server_beast/docs/: beast.md  cpp.md  property_tree.md
client_server_beast/http/: CMakeLists.txt  http_client.cpp  http_server.cpp  http_server_async.cpp  http_server_sync.cpp  ssdFPGA.cpp  ssdFPGA.h  st_ie.h  st_server.cpp  st_sync_primitives.h  st_worker.h  st_workers.h  ultis.h  workers.h  workers.hpp
client_server_beast/ws/: CMakeLists.txt  ws_client.cpp  ws_server.cpp
cmake/: FindTensorRT.cmake
cmake-modules/: FindGFLAGS.cmake
common/ultis/: ultis.h
docs/: index.html  mec_apis.yml
docs/apis/: index.html  mec_apis.yml
docs/dev/: asio.md  dev_logs.md  inference_api.md  note.md  server.md  tensorrt.md
docs/models/: APIs.html  FPGAs.html  Inline_response_200.html  Inline_response_200_1.html  Predictions.html  Services.html
docs/operations/: InferenceEngineApi.html  ModelApi.html  ServerApi.html
fcn16s/: CMakeLists.txt  fcn16s.cpp  fcn16s.h
format_reader/: CMakeLists.txt
ncl/: concurent_queue.h  concurent_queue.md  concurrent_queue.h  inference_engine.h  ssdFPGA.h  ultis.h
server/: CMakeLists.txt
server/_experimental/: CMakeLists.txt  st_device.h  st_layer.h  st_server_reactor.cpp
server/apps/: CMakeLists.txt  st_serving_server.cpp
server/config/: README.md  _bitstream.txt  _config_reactor.json  config.json  config_cls.json  config_multiples.json  config_rcnn.json  config_rcnn_1fpga_4cpu.json  config_rcnn_fpga.json  config_ssd.json  config_ssd_1fpga_4cpu.json  config_ssd_cpu.json  config_ssd_fpga.json  config_tensorrt.json  config_yolo.json  config_yolo_1fpga_4cpu.json  config_yolo_cpu.json  config_yolo_fpga.json
server/config/parallel/: config_rcnn_1fpga_4cpu.json  config_rcnn_cpu.json  config_rcnn_fpga.json  config_ssd_1fpga_4cpu.json  config_ssd_cpu.json  config_ssd_fpga.json  config_tensorrt.json  config_yolo_1fpga_4cpu.json  config_yolo_cpu.json  config_yolo_fpga.json
server/config/reactor/: config.json  config_tmp.json
server/libs/: st_async_worker.h  st_device.h  st_exception.h  st_grpc_impl.h  st_ie.h  st_ie2.h  st_ie_base.h  st_ie_buffer.h  st_ie_common.h  st_ie_factory.h  st_ie_half.h  st_ie_openvino.h  st_ie_tensorrt.h  st_layer.h  st_logging.h  st_message_queue.h  st_server.h  st_sync.h  st_sync_worker.h  st_ultis.h  st_utils.h  st_worker.h
server/libs/stubs/: inference_rpc.proto
server/parallel/: CMakeLists.txt  st_server.cpp  st_server_parallel.cpp
server/proto/: inference_engine_grpc.proto
server/reactor/: CMakeLists.txt  st_server_reactor.cpp
server_config/: bitstream.txt  config.json
ssd_inference_server/: CMakeLists.txt  inference_server.cpp  inference_server.hpp  note.md
ssd_standalone/: CMakeLists.txt  main.cpp  ssd_standalone.hpp
st_server/: inference_server.cpp
test/: CMakeLists.txt  concurrent_queue_test.cpp
